Fixing 'jumpiness' bug. Improved media queries to support smaller window widths.

--- a/css_full_page_transitions/s.css
+++ b/css_full_page_transitions/s.css
@@ -49,7 +49,6 @@ header > p{padding: 0px 20px;}
 	top:0;
 	position:relative;
 	margin: 3em auto 0 auto;
-	background:#3cf;
 	width:90%;
 }
 
@@ -76,12 +75,11 @@ section{
 	position: absolute;
 	background: #fff;
 	margin: 0 -10px;
-	float: left;
 	cursor: pointer;
 	z-index:auto;
 	display:block;
 
-	     -o-transform-origin: 100% 100%;
+	    -o-transform-origin: 100% 100%;
 	-webkit-transform-origin: 100% 100%;
        -moz-transform-origin: 100% 100%;
         -ms-transform-origin: 100% 100%;
@@ -96,6 +94,22 @@ section{
 }
 
 section p{line-height: 1.3; border: 10px solid #fff;}
+
+
+/*
+first-child: Chinatown
+2: banff
+3: djem el fna
+4: montserrat vertical.
+5: ben yussef
+6: kananaskis
+7: montserrat horizontal.
+8: barcelona
+9: saba
+10: essaouira
+
+*/
+
 
 section:first-child{
 	     -o-transform: rotate(15deg);
@@ -172,7 +186,7 @@ section:nth-child(10){
 section img{
 	display: block;
 	width:   100%;
-	margin: 0 0 10px 0;
+	margin:  0 0 10px 0;
 }
 
 
@@ -195,6 +209,7 @@ section.leadPhoto{
        -moz-transform: scale(1.5);
         -ms-transform: scale(1.5);
             transform: scale(1.5);
+
 }
 
 .close{
@@ -262,7 +277,7 @@ footer img{
 }
 
 /* For iPad sized devices */
-@media screen and (min-width: 768px){
+ @media screen and (max-width: 768px) {
 
 	section{width: 175px;}
 	section.vert{width: 126px;}
@@ -272,95 +287,94 @@ footer img{
 		top:  0;
 	}
 	section:nth-child(2){
-		left: 90px;
+		left: 0;
 		top: 0px;
 	}
 	section:nth-child(3){
 		left: 0;
-		top: 80px;
+		top: 0px;
 	}
 	section:nth-child(4){
-		left: 100px;
+		left: 7%;
 		top: 55px;
 	}
 	section:nth-child(5){
-		left: 150px;
+		left: 9%;
 		top: 5px;
 	}
 	section:nth-child(6){
-		left: 200px;
+		left: 30%;
 		top:  145px;
 	}
 	section:nth-child(7){
-		left: 300px;
+		left: 40%;
 		top:   80px;
 	}
 	section:nth-child(8){
-		left: 390px;
+		left: 42%;
 		top:    0px;
 	}
 	section:nth-child(9){
-		left: 400px;
+		left: 55%;
 		top:   20px;
 	}
 	section:nth-child(10){
-		left: 450px;
+		left: 80%;
 		top:   85px;
 	}
 	.loaded section.leadPhoto{
-		left: 50%;
+		left: 49%;
 		top: 80px;
 	}
 }
-
 /* For computer sized devices */
-@media screen and (min-width: 1025px){
+@media screen and (min-width: 769px){
 	section{width: 250px;}
 	section.vert{width: 180px;}
 
 	section:first-child{
-		left: 0px;
+		left: 0;
 		top: 70px;
 	}
 	section:nth-child(2){
-		left: 90px;
+		left: 10%;
 		top: 0px;
 	}
 	section:nth-child(3){
-		left: 10px;
+		left: 4%;
 		top: 80px;
 	}
 	section:nth-child(4){
-		left: 400px;
+		left: 40%;
 		top:   55px;
 	}
 	section:nth-child(5){
-		left: 250px;
+		left: 25%;
 		top:   25px;
 	}
 	section:nth-child(6){
-		left: 600px;
+		left: 60%;
 		top:    0px;
 	}
 	section:nth-child(7){
-		left: 605px;
+		left: 62%;
 		top:   90px;
 	}
 	section:nth-child(8){
-		left: 700px;
+		left: 70%;
 		top: 0px;
 	}
 	section:nth-child(9){
-		left: 750px;
+		left: 75%;
 		top: 30px;
 	}
 	section:nth-child(10){
-		left: 450px;
+		left: 40%;
 		top: 105px;
 	}
 
-	.loaded section.leadPhoto{
-		left: 50%;
+	section.leadPhoto{
+		left: 49%;
 		top: 100px;
 	}
 }
